--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ body {
     }
 
     .button:hover {
-      background-position: right center; /* change the direction of the change here */
+      background-position: right center; 
       color: #fff;
       text-decoration: none;
     }
