--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,45 +1,49 @@
 
 :root {
-    /* Declare variables */
-    --dark-grey-color:#2E2F30;
-    --light-grey-color:#4A4B4C;
-  }
-  /*Smooth scrolling*/
+  /* Declare variables */
+  --dark-grey-color:#2E2F30;
+  --light-grey-color:#4A4B4C;
+}
+/*Smooth scrolling*/
 html {
-    scroll-behavior: smooth;
-  }
-  /*Background image upper part*/
-body {
-    background-image: url("../images/bg1.jpg");
-    background-size: cover;
-    background-repeat:   no-repeat;
-    background-position: center center; 
-  }
-  h1{
-    color:var(--dark-grey-color) ;
-  }
-  h2{
-    color:var(--light-grey-color);
-  }
-  button{
-          
-      background-image: linear-gradient(to right, #4776E6 0%, #8E54E9  51%, #4776E6  100%);
-      margin: 10px;
-      padding: 15px 45px;
-      text-align: center;
-      text-transform: uppercase;
-      transition: 0.5s;
-      background-size: 200% auto;
-      color: white;            
-      box-shadow: 0 0 20px #eee;
-      border-radius: 10px;
-      display: block;
-    }
 
-    .button:hover {
-      background-position: right center; 
-      color: #fff;
-      text-decoration: none;
-    }
-   
-  
+  overflow: hidden; /* Hide scrollbars */
+}
+/*Background image upper part*/
+body {
+margin: 15% auto;
+  background-image: url("../images/bg1.jpg");
+  background-size: cover;
+  background-repeat:   no-repeat;
+  background-position: center center;
+
+}
+
+
+h1{
+  color:var(--dark-grey-color) ;
+}
+h2{
+  color:var(--light-grey-color);
+}
+.button{
+        
+    background-image: linear-gradient(to right, #4776E6 0%, #8E54E9  51%, #4776E6  100%);
+    margin: 10px auto;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+  }
+
+  .button:hover {
+    background-position: right center; 
+    color: #fff;
+    text-decoration: none;
+  }
+ 
