Add footer. Add additional html page search result card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  height: 100%;
+  min-height: 100vh;
 }
 .main-section {
   margin-top: 15%;
@@ -119,4 +119,42 @@ h4 {
 
 .hidden {
   display: none;
+}
+
+.main-section-full-page {
+  margin: 50px;
+}
+.navigation {
+  background-image: linear-gradient(
+    to right,
+    #4776e6 0%,
+    #8e54e9 51%,
+    #4776e6 100%
+  );
+  padding: 5px 5px 5px 10px;
+}
+.navigation a {
+  color: white;
+  font-style: normal;
+  font-weight: bold;
+}
+.navigation i,
+footer i {
+  font-style: normal;
+}
+footer {
+  background-color: var(--dark-grey-color);
+  padding: 5px 0;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+footer a {
+  color: white;
+  font-size: 1.25rem;
+  font-style: normal;
+}
+
+.main {
+  height: 100%;
 }
