--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,9 +165,15 @@ footer a {
   max-width: 300px;
   list-style: none;
 }
-h5{
-  color:orange;
+/*Warning message if no address found*/
+h5 {
+  color: orange;
   text-transform: uppercase;
-font-weight: bold;
-padding: 0px 10%;
-;}
+  font-weight: bold;
+  padding: 0px 10%;
+}
+
+.list{
+margin-bottom: 10%;
+
+}
