--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,3 +177,12 @@ h5 {
 margin-bottom: 10%;
 
 }
+
+.form-input p{
+  color: red;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 0px 20%;
+  font-size: 1.5rem;
+}
+
